--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
   </head>
   <body>
     <div class="content">
-      <header>ROCK PAPER SCISSORS</header>
-      <div class="main">
-        <div class="render">
-          <p id="player">YOU:</p>
-          <p id="computer">COMPUTER:</p>
-        </div> 
-        <div id="result">
+      <header>ROCK-PAPER-SCISSORS</header>
+      <div class="render">
+          <div class="render-lf">
+            <h3 id="pscore">You: 0</h3>
+            <p class="play" id="player"></p>
+          </div>
+          <div id="result">
         </div>
         <div class="player">
           <button id="rock">Rock</button>
