--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
           </div>
           <div id="result">
         </div>
+        <div id="ties">ties:0</div>
+        <div id="count"></div>
+        <p id="game"></p>
+          <div class="render-rg">
+            <h3 id="cscore">Logik: 0</h3>
+            <p class="play" id="computer"></p>
+          </div>
+        </div> 
+      <div class="main">
         <div class="player">
           <button id="rock">Rock</button>
           <button id="paper">Paper</button>
