--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
         </div> 
       <div class="main">
         <div class="player">
-          <button id="rock">Rock</button>
-          <button id="paper">Paper</button>
-          <button id="scissors">Scissors</button>
+          <button id="rock"><div class="emo">✊</div><small>rock</small></button>
+          <button id="paper"><div class="emo">🤚</div><small>paper</small></button>
+          <button id="scissors"><div class="emo">✌</div><small>scissors</small></button>
         </div>
         <!-- <div class="computer">
         </div> -->
