--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
           <button id="paper"><div class="emo">🤚</div><small>paper</small></button>
           <button id="scissors"><div class="emo">✌</div><small>scissors</small></button>
         </div>
-        <!-- <div class="computer">
-        </div> -->
-        <button id="replay">Play again?</button>
+        <div class="reset-btn">
         <button type="reset" id="reset">Reset</button>
         <br>
       </div>
