--- a/index.html
+++ b/index.html
@@ -31,11 +31,7 @@
         <div class="reset-btn">
         <button type="reset" id="reset">Reset</button>
       </div>
-      <section class="scores">
-        <div id="pscore">You: 0</div>
-        <div id="cscore">Computer: 0</div>
-        <div id="ties">Ties:0</div>
-      </section>
+      </div>
     </div>
     <script src="index.js"></script>
   </body>
